; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_entry.c_ipc_entry_alloc.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_entry.c_ipc_entry_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KERN_INVALID_TASK = common dso_local global i64 0, align 8
@KERN_SUCCESS = common dso_local global i64 0, align 8
@ITS_SIZE_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ipc_entry_alloc(i32 %0, i32* %1, i32* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @is_write_lock(i32 %9)
  br label %11

11:                                               ; preds = %38, %3
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @is_active(i32 %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %19, label %15

15:                                               ; preds = %11
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @is_write_unlock(i32 %16)
  %18 = load i64, i64* @KERN_INVALID_TASK, align 8
  store i64 %18, i64* %4, align 8
  br label %39

19:                                               ; preds = %11
  %20 = load i32, i32* %5, align 4
  %21 = load i32*, i32** %6, align 8
  %22 = load i32*, i32** %7, align 8
  %23 = call i64 @ipc_entry_get(i32 %20, i32* %21, i32* %22)
  store i64 %23, i64* %8, align 8
  %24 = load i64, i64* %8, align 8
  %25 = load i64, i64* @KERN_SUCCESS, align 8
  %26 = icmp eq i64 %24, %25
  br i1 %26, label %27, label %29

27:                                               ; preds = %19
  %28 = load i64, i64* %8, align 8
  store i64 %28, i64* %4, align 8
  br label %39

29:                                               ; preds = %19
  %30 = load i32, i32* %5, align 4
  %31 = load i32, i32* @ITS_SIZE_NONE, align 4
  %32 = call i64 @ipc_entry_grow_table(i32 %30, i32 %31)
  store i64 %32, i64* %8, align 8
  %33 = load i64, i64* %8, align 8
  %34 = load i64, i64* @KERN_SUCCESS, align 8
  %35 = icmp ne i64 %33, %34
  br i1 %35, label %36, label %38

36:                                               ; preds = %29
  %37 = load i64, i64* %8, align 8
  store i64 %37, i64* %4, align 8
  br label %39

38:                                               ; preds = %29
  br label %11

39:                                               ; preds = %36, %27, %15
  %40 = load i64, i64* %4, align 8
  ret i64 %40
}

declare dso_local i32 @is_write_lock(i32) #1

declare dso_local i32 @is_active(i32) #1

declare dso_local i32 @is_write_unlock(i32) #1

declare dso_local i64 @ipc_entry_get(i32, i32*, i32*) #1

declare dso_local i64 @ipc_entry_grow_table(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
